[ADD] Add itens in page

--- a/webpages/src/app/globals.css
+++ b/webpages/src/app/globals.css
@@ -34,3 +34,16 @@ body {
     color-scheme: dark;
   }
 }
+
+p{
+  font-family: var(--font-raleway);
+}
+
+.navbar {
+  padding: 1rem 1.5rem;
+  height: 70px;
+}
+
+.navbar:nth-child() {
+  cursor: pointer;
+}
