--- a/webpages/src/pages/recipe.module.css
+++ b/webpages/src/pages/recipe.module.css
@@ -3,6 +3,7 @@
   border-radius: 20px;
   height: 100vh;
   margin: 2.6875rem;
+  height: fit-content;
 }
 
 .recipeImage {
@@ -16,6 +17,7 @@
   font-family: var(--font-playfair);
   font-size: 2.5rem;
   margin: 2rem;
+  margin-top: 0;
   text-align: center;
 }
 
@@ -25,10 +27,30 @@
   flex-direction: column;
   justify-content: center;
   gap: 5px;
+  margin-bottom: 2rem;
 }
 
 .recipePrepTimeText {
   font-family: var(--font-raleway);
   font-size: 1.25rem;
   font-weight: bold;
+}
+
+.recipeInfoContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.recipeIngredients, .recipePreparation {
+  font-family: var(--font-raleway);
+  font-size: 25px;
+  max-width: 36.625rem;
+  padding: 4.5625rem;
+  padding-top: 0;
+  width: 100%;
+}
+
+.recipePreparation {
+  border-left: solid 3px var(--primary-color);
+  max-width: unset;
 }
